--- a/src/views/public/index.html
+++ b/src/views/public/index.html
@@ -54,21 +54,25 @@
             <!-- 第一行圖片 -->
             <div class="image-container medium">
                 <div class="image-label">一階通過率(解釋)</div>
-                <canvas id="chart-line-1" width="400" height="300"></canvas>
+                <canvas id="chart-line-1"></canvas>
             </div>
             <div class="image-container medium">
                 <div class="image-label">R-Score & 分發錄取指數(解釋)</div>
-                <canvas id="chart-line-2" width="400" height="300"></canvas>
+                <canvas id="chart-line-2"></canvas>
             </div>
 
             <!-- 第二行圖片 -->
             <div class="image-container medium">
                 <div class="image-label">正備取有效性(解釋)</div>
-                <canvas id="chart-line-3" width="400" height="300"></canvas>
+                <canvas id="chart-line-3"></canvas>
             </div>
             <div class="image-container medium">
                 <div class="image-label">正取有效性(解釋)</div>
-                <canvas id="chart-line-4" width="400" height="300"></canvas>
+                <canvas id="chart-line-4"></canvas>
+            </div>
+
+            <div id="lightbox" class="lightbox">
+                <div class="=lightbox-content" id="lightbox-content"></div>
             </div>
 
             <!-- 社群網路圖 -->
