--- a/src/views/public/style.css
+++ b/src/views/public/style.css
@@ -494,8 +494,14 @@ body::before {
 }
 
 .image-container.medium {
-    height: 500px;
-    height: 400px;
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: 100%;
+}
+canvas{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .image-label {
@@ -513,6 +519,30 @@ body::before {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     z-index: 10;
     letter-spacing: 0.3px;
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;left: 0;
+    inset: 0;
+    width: 100%;width:100%;
+    backdrop-filter: blur(3px);
+    justify-content: center;
+    align-items: center;
+    z-index: 111;
+}
+.lightbox-content{
+    background: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    transform: none;
+    margin: 0;
+    top: auto;
+    width: 100vw;height: 100vh;
+    overflow: auto;
+    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+    animation: fadeInUp 0.2s ease;
 }
 
 .placeholder-text {
