--- a/src/views/public/index.html
+++ b/src/views/public/index.html
@@ -11,6 +11,9 @@
     <script type="module" src="./assets/main.js"></script>
 </head>
 <body>
+    <div id="lightbox" class="lightbox">
+        <div id="lightbox-content" class="=lightbox-content" ></div>
+    </div>
     <div class="container">
         <!-- 左側邊欄 -->
         <div class="sidebar">
@@ -71,9 +74,7 @@
                 <canvas id="chart-line-4"></canvas>
             </div>
 
-            <div id="lightbox" class="lightbox">
-                <div class="=lightbox-content" id="lightbox-content"></div>
-            </div>
+            
 
             <!-- 社群網路圖 -->
             <div id=""class="image-container large">
