Compare_mode added

--- a/src/views/public/index.html
+++ b/src/views/public/index.html
@@ -66,9 +66,21 @@
                         <thead>
                             <tr>
                                 <th>代號</th>
-                                <th id="111Year">111年R值</th>
-                                <th id="112year">112年R值</th>
-                                <th id="113year">113年R值</th>
+                                <th id="FirYear">
+                                    <select id="SelectYear">
+                                        <option value="111">111年R值</option>
+                                        <option value="112">112年R值</option>
+                                        <option value="113">113年R值</option>
+                                    </select>
+                                </th>
+                                <th id="SecYear">
+                                    <select id="CompareYear">
+                                        <option value="111">111年R值</option>
+                                        <option value="112">112年R值</option>
+                                        <option value="113">113年R值</option>
+                                    </select>
+                                </th>
+                                <th id="schoolname">學校變化</th>
                             </tr>
                         </thead>
                         <tbody>
