Overhaul `CompareMode` display

--- a/src/views/public/index.html
+++ b/src/views/public/index.html
@@ -65,7 +65,7 @@
                     <table id ="resultTable">
                         <thead>
                             <tr>
-                                <th>代號</th>
+                                <th>校系名稱</th>
                                 <th id="FirYear">
                                     <select id="SelectYear">
                                         <option value="111">111年R值</option>
